<resources>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Projects</string>
    <string name="menu_test">Test</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="log_out">Log out</string>
    <string name="projects">Projects</string>
    <string name="unnamed_project">Unnamed Project</string>
    <string name="date_of_distribution">Start: %1$s</string>
    <string name="beneficiaries">Beneficiaries: %1$d</string>
    <string name="commodities">Commodities: </string>
    <string name="households">Households: %1$d</string>
    <string name="beneficiaries_title">Beneficiaries</string>
    <string name="national_id">National ID: %1$s</string>
    <string name="beneficiaries_reached">%1$d of %2$d beneficiaries reached</string>
    <string name="beneficiary_name">%1$s %2$s</string>
    <string name="sort_alphabetically">Sort alphabetically</string>
    <string name="search_beneficiary_hint">Search names</string>
    <string name="distributions">Distributions</string>
    <string name="unknown">Unknown</string>
    <string name="assign_booklet">Assign booklet</string>
    <string name="status">Status</string>
    <string name="distributed">Distributed</string>
    <string name="not_distributed">Not Distributed</string>
    <string name="beneficiary">Beneficiary</string>
    <string name="distribution">Distribution</string>
    <string name="project">Project</string>
    <string name="confirm_distribution">Confirm</string>
    <string name="distribution_confirmation_message">%1$s successfully confirmed</string>
    <string name="rescan_qr">Rescan QR</string>
    <string name="booklet_id">Booklet ID</string>
    <string name="camera_permission_dialog_title">Camera permission</string>
    <string name="camera_permission_dialog_message">If you want to scan a QR code you need to grant a camera permission.</string>
    <string name="camera_permission_dialog_positive_btn_label">OK</string>
    <string name="camera_permission_dialog_negative_btn_label">Not now</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="search">Search</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="pending_local_changes">Pending local changes</string>
    <string name="no_pending_changes">No pending changes</string>
    <string name="current_data">Last update</string>
    <string name="sync">Sync Data</string>
    <string name="revert">Undo Assignment</string>
    <string name="logout_alert_text">Are you sure you want to log out? All application data will be erased.</string>
    <string name="error_message">There was an error during sync.</string>
    <string name="humansis_id">Humansis ID: %1$d</string>
    <string name="settings_country_hint">Enter country ISO3</string>
    <string name="country">Country</string>
    <string name="settings_save">Save</string>
    <string name="settings_edit">Edit</string>
    <string name="settings_country_update_success">Country updated</string>
    <string name="settings_country_update_error">Invalid ISO3 code</string>
    <string name="commodity_value">%1$d %2$s</string>
    <string name="error_invalid_username">Invalid username</string>
    <string name="error_invalid_password">Invalid password</string>
    <string name="error_no_internet_connection">Network connection lost</string>
    <string name="error_unknown">Unknown error</string>
    <string name="error_db_not_initialized">Database was not initialized</string>
    <string name="error_missing_user_id">User id in response missing</string>
    <string name="downloading">Downloading…</string>
    <string name="no_data_message">Nothing here, try to reload.</string>
    <string name="invalid_code">Invalid code</string>
    <string name="already_assigned">Already assigned code</string>
    <string name="last_update_failed">Last update failed</string>
    <string name="assign">Assign</string>
    <string name="sort_default">Grouped</string>
    <string name="sort_az">︎AZ</string>
    <string name="sort_za">ZA</string>
    <string name="error_service_unavailable">Service is unavailable</string>
    <string name="logout_alert_title">Log out</string>
    <string name="logout_alert_pending_changes_title">Pending changes!</string>
    <string name="logout_alert_pending_changes_text">You cannot log out right now. Pending changes need to be synchronized before log out.</string>
    <string name="show_developer_logs">Show developer logs</string>
    <string name="show_system_logs">Show system logs</string>
    <string name="copy">Copy</string>
    <string name="close">close</string>
    <string name="error_network_other">There was a network error</string>
    <string name="error_server">Server responded with error.</string>
    <string name="error_bad_request">Bad request.</string>
    <string name="error_user_not_allowed">User not allowed.</string>
    <string name="error_resource_not_found">Resource not found.</string>
    <string name="error_data_conflict">There was a data conflict.</string>
    <string name="error_server_api_changed">Server API changed.</string>
    <string name="error_too_many_requests">Too many request.</string>
    <string name="error_server_failure">Server failure</string>
    <string name="error_parsing_response">Response format not recognized.</string>
    <string name="error_other">An unexpected error occurred.</string>
    <string name="show_error_detail">Show error detail</string>
    <string name="errors_list_label">The following errors have occurred:</string>
    <string name="detail">Detail</string>

    <string name="KHM">KHM</string>
    <string name="SYR">SYR</string>
    <string name="warning_country_change">Warning: Changing country will erase your current data!</string>
    <string name="unknwon_error">Unknown error has occurred.</string>
    <string name="download_error">Couldn\'t download %s.</string>
    <string name="auth_expiration_explanation">You were logged out because your session has expired. Your data is still saved on the device. Log in to sync.</string>
    <string name="sync_error">There was an error during synchronization.</string>
    <string name="dont_save">Don\'t save</string>
    <string name="confirm_scan_question">Do you want to confirm the scanned code?</string>
    <string name="confirm_scan_title">Confirm booklet</string>

    <string name="referral_type_none">None</string>
    <string name="referral_type_health">Health</string>
    <string name="referral_type_protection">Protection</string>
    <string name="referral_type_shelter">Shelter</string>
    <string name="referral_type_nutrition">Nutrition</string>
    <string name="referral_type_other">Other</string>
    <string name="referral_validation_error_xor">Fill in both type and comment or none of them.</string>
    <string name="referral_validation_error_unset">Can\'t remove type.</string>
    <string name="cancel">Cancel</string>
    <string name="referral_type_label">Type</string>
    <string name="referral_note_label">Comment</string>
    <string name="sync_summary">Uploaded %1$d of %2$d changes.</string>
    <string name="sync_summary_nothing">No local changes were uploaded.</string>
    <string name="expand_referral_information">Expand referral information</string>
    <string name="add_referral">Add referral information</string>
    <string name="edit_referral">Edit referral information</string>
    <string name="confirm_distribution_message">Confirm to assign this item to the beneficiary</string>

    <string name="acra_notif_channel">Submit crash report</string>
    <string name="acra_notif_title">Humansis crashed</string>
    <string name="acra_notif_text">Sorry, the app crashed. Please send a report to the developers.</string>
    <string name="acra_notif_send_button">Send</string>
    <string name="acra_email_subject">Android Crash Report</string>

</resources>
