<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:focusableInTouchMode="true"
            android:background="@drawable/background_dark_component">

        <ImageView
                android:id="@+id/iv_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/search"
                android:tint="@color/white"
                app:srcCompat="@drawable/ic_search" />

        <EditText
                android:id="@+id/et_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                android:hint="@string/search_beneficiary_hint"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

    </LinearLayout>

    <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_dark_component">

        <ImageView
                android:id="@+id/btn_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/sort_alphabetically"
                android:padding="16dp"
                android:tint="@color/white"
                app:srcCompat="@drawable/ic_sort_by_alpha" />

    </FrameLayout>

</merge>