<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <ImageView android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:scaleType="centerCrop"
               tools:ignore="ContentDescription"
               app:srcCompat="@drawable/image_login"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="30dp"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginEnd="162dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="162dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="183dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="276dp" android:background="@drawable/background_login">
        <ImageView
                android:layout_width="87dp"
                android:layout_height="74dp"
                app:srcCompat="@mipmap/ic_launcher"
                android:id="@+id/imageView3"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
        />
        <TextView
                android:text="@string/beneficiary_managment_system"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:textColor="@android:color/white"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
        />
        <EditText
                style="@style/LoginEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/username"
                android:text="demo@humansis.org"
                android:ems="10"
                android:id="@+id/et_username" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
        />
        <EditText
                style="@style/LoginEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:ems="10"
                android:id="@+id/et_password" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/et_username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
        <Button
                android:text="@string/login"
                android:background="@drawable/background_login_btn"
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_login"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/et_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textAllCaps="false"/>
        <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/btn_login" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>